Update to produce PDF, more lines per page (30), add hists ok box.

--- a/run_tracking_form/checklist_run.tex
+++ b/run_tracking_form/checklist_run.tex
@@ -1,16 +1,17 @@
 \documentclass[12pt]{article}
 
 \newcommand{\cbox}{\raisebox{.6ex}{\fbox{\rule{0in}{0.05in}\rule{0.05in}{0in}}}}
-\newcommand{\eline}{\rule{0.75in}{0.01in}}
+\newcommand{\eline}{\rule{0.7in}{0.01in}}
+\newcommand{\cmline}{\rule{1.2in}{0.01in}}
 
 \parindent=0in
-\oddsidemargin 0in
-\evensidemargin 0in
+\oddsidemargin -0.6in
+\evensidemargin -0.6in
 \topmargin 0in
 \headheight 0in
 \headsep 0in
-\textwidth 6.5in
-\textheight 9in
+\textwidth 7.5in
+\textheight 10in
 \parsep 0in
 \pagestyle{empty}
 
@@ -22,35 +23,40 @@ GLUEX RUN TRACKING SHEET
 $$
 \begin{tabular}{lcccccccc}
        &      &      &      & Begin &         & PARA \\
-Run    &      &      &      & Run   & No.\ of & PERP  \\
-Number & Data & Junk & Date & Time  & Events  & or Other & Comment\\
+Run    & Good & Junk &      & Run   & No.\ of & PERP     & Hists \\
+Number & Run  & Run  & Date & Time  & Events  & or Other & OK? & Comment\\
 \hline
 \\
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.075in]
 
 \end{tabular}
 $$
