--- a/dirc/README
+++ b/dirc/README
@@ -62,7 +62,7 @@ root loadlib.C drawHP.C'("drc.root")'
 For a GUI with 3D visualization one need to have OpenGl and Qt libraries installed.
 Also -DG4UI_USE_EXECUTIVE flag needs to be added in GNUmakefile
 
-####### LUT creation #######
+####### LUT creation (single bar) #######
 
 #1) Generate photons from the end of a single bar for (1M events in run.mac)
 #	DIRCLUT card in control.in controls which bar the LUT will be generated for
@@ -74,10 +74,23 @@ hd_root -nthreads=10 -o lut.root --plugin=lut_dirc out.hddm
 #3) Averege LUT directions for a single bar:
 root loadlib.C glxlut_avr.C+'("lut.root")'
 
-#3.5) Add step for generating LUT for all bars via batch system
+####### LUT creation (all bars via swif) #######
+
+#1) Generate photons from the end of single bars via swif jobs
+cd batch/
+./swif_lut.py lut_workflow
+
+#2) Loop over produced lut_NN.hddm files to make ROOT TTrees
+./loop_lut_dirc.py
+
+#3) Loop over produced lut_NN.root files to make averaged LUT
+./loop_lut_avr.py
 
 #4) Combine averaged LUT tables from many bars into single file:
-root loadlib.C glxlut_add.C+'("lut/loopLut/lut_avr_*.root")'
+root loadlib.C glxlut_add.C+'("tree/lut_avr_*.root")'
+
+#5) Convert LUT to "flat" TTree with smaller size to be used in JANA factory
+root loadlib.C glxlut_convert.C
 
 ####### LUT reconstruction (standalone macro) #######
 
@@ -91,8 +104,9 @@ root loadlib.C reco_lut.C'("drc_kaon_pion.root")'
 #1) Simulate any event sample you like (see example simulation workflow above).  Use dirc_hists plugin to run LUT algorithm in PID library.  
 # Some example event samples are located at 
 ## /volatile/halld/home/jrsteven/2018-dirc/bggen_Ee10.3_Eg7.7
-## /volatile/halld/home/jrsteven/2018-dirc/particle_gun/kp_p4_theta4.cfg/ (fixed p=4 GeV and theta=4 deg)
-## /volatile/halld/home/jrsteven/2018-dirc/particle_gun/kp_flat.cfg/ (flat in p and theta)
+## /volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver01/bggen_Ee10.3_Eg7.7
+## /volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver01/kp_p4_theta4/ (fixed p=4 GeV and theta=4 deg)
+## /volatile/halld/home/jrsteven/2018-dirc/dircsim-2018_08-ver01/kp_flat/ (flat in p and theta)
 ## the above to directories are for kaons, and there are similar directories for pions
 
 #2) View the histograms for thetaC, likelihood differences etc. in the hd_root.root file
