* adjustments to columns * print sheets in numerical order

--- a/run_tracking_form/checklist_run.tex
+++ b/run_tracking_form/checklist_run.tex
@@ -1,17 +1,17 @@
 \documentclass[12pt]{article}
 
 \newcommand{\cbox}{\raisebox{.6ex}{\fbox{\rule{0in}{0.05in}\rule{0.05in}{0in}}}}
-\newcommand{\eline}{\rule{0.6in}{0.01in}}
+\newcommand{\eline}{\rule{0.5in}{0.01in}}
 \newcommand{\cmline}{\rule{1.5in}{0.01in}}
 
 \parindent=0in
 \oddsidemargin -0.6in
 \evensidemargin -0.6in
-\topmargin 0in
+\topmargin -0.7in
 \headheight 0in
 \headsep 0in
 \textwidth 7.5in
-\textheight 10in
+\textheight 10.7in
 \parsep 0in
 \pagestyle{empty}
 
@@ -21,33 +21,32 @@ GLUEX RUN TRACKING SHEET
 \end{center}
 
 $$
-\begin{tabular}{lcccccccc}
-       &      &      &      & Begin &         & PARA \\
-Run    & Good & Junk &      & Run   & No.\ of & PERP     & Hists \\
-Number & Run  & Run  & Date & Time  & Events  & or Other & OK? & Comment\\
+\begin{tabular}{lccccccccc}
+       &      &      &      & Begin & End  &         &       &          & \\
+Run    & Good & Junk &      & Run   & Run  & No.\ of & Rad-  & Hists    & \\
+Number & Run  & Run  & Date & Time  & Time & Events  & iator & in Elog? & Comment\\
 \hline
-\\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.200in]
-
+\\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
 \end{tabular}
 $$
 
