Get page size right.

--- a/run_tracking_form/checklist_run.tex
+++ b/run_tracking_form/checklist_run.tex
@@ -1,8 +1,10 @@
 \documentclass[12pt]{article}
 
+\usepackage[pass,letterpaper]{geometry}
+
 \newcommand{\cbox}{\raisebox{.6ex}{\fbox{\rule{0in}{0.05in}\rule{0.05in}{0in}}}}
-\newcommand{\eline}{\rule{0.5in}{0.01in}}
-\newcommand{\cmline}{\rule{1.5in}{0.01in}}
+\newcommand{\eline}{\rule{0.4in}{0.01in}}
+\newcommand{\cmline}{\rule{2.0in}{0.01in}}
 
 \parindent=0in
 \oddsidemargin -0.6in
@@ -20,34 +22,32 @@
 GLUEX RUN TRACKING SHEET
 \end{center}
 
-$$
 \begin{tabular}{lccccccccc}
        &      &      &      & Begin & End  &         &       &          & \\
 Run    & Good & Junk &      & Run   & Run  & No.\ of & Rad-  & Hists    & \\
 Number & Run  & Run  & Date & Time  & Time & Events  & iator & in Elog? & Comment\\
 \hline
-\\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
-runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.250in]
+\\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
+runno & \cbox & \cbox & \eline & \eline & \eline & \eline & \eline & \cbox & \cmline \\[0.240in]
 \end{tabular}
-$$
 
 \end{document}
